--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rental Management System</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏠</text></svg>">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2.39.3/dist/umd/supabase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -558,19 +558,19 @@
         const SUPABASE_URL = 'https://fzjzzujrjqjacbfbwcvd.supabase.co';
         const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ6anp6dWpyanFqYWNiZmJ3Y3ZkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyODg0NjYsImV4cCI6MjA4NTg2NDQ2Nn0.dwzx43oEMtLVha7WoLWqAkgRPMLzbE0NaOurS_JWyhY';
         
-        // Wait for libraries to load
-        let supabase;
+        // Wait for libraries to load and initialize
+        let supabaseClient;
         
         function initSupabase() {
             try {
-                if (window.supabase && window.supabase.createClient) {
-                    supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-                    console.log('Supabase initialized successfully');
-                } else {
-                    console.error('Supabase library not loaded');
-                }
+                // For UMD build, supabase is on window
+                const { createClient } = window.supabase;
+                supabaseClient = createClient(SUPABASE_URL, SUPABASE_KEY);
+                console.log('Supabase initialized successfully');
+                return true;
             } catch (error) {
                 console.error('Error initializing Supabase:', error);
+                return false;
             }
         }
 
@@ -655,7 +655,7 @@
         async function initDatabase() {
             try {
                 // Create leases table if it doesn't exist
-                const { error } = await supabase.rpc('create_leases_table');
+                const { error } = await supabaseClient.rpc('create_leases_table');
                 if (error && !error.message.includes('already exists')) {
                     console.error('Error creating table:', error);
                 }
